# rscsundae

./: .clang-format  .gitignore  BUGS  Makefile.in  README.md  config.h.in  configure  configure.ac
data/: fetch-jag-files.sh  schema.sql  settings.ini
data/lua/: content.lua  script.lua
data/lua/rs1/items/: asgarniandrinks.lua  beer.lua  cabbage.lua  cake.lua  equipment.lua  food.lua  kebab.lua  meat.lua  pies.lua  pizza.lua  pumpkin.lua  silverlight.lua  spinachroll.lua  stew.lua  strengthpotion.lua  superchisel.lua  wine.lua
data/lua/rs1/items/asgarnia/: alcohol.lua
data/lua/rs1/misc/: animals.lua  clutter.lua  doors.lua  dummy.lua  eviltree.lua  karamjaship.lua  ladders.lua  muddychest.lua  plants.lua  water.lua  web.lua
data/lua/rs1/misc/karamja/: bananacrate.lua  bananatree.lua  sarimjaship.lua
data/lua/rs1/monster/: barbarian.lua  black_knight.lua  chaos_dwarf.lua  chaosmonk.lua  chicken.lua  darkerwiz.lua  dwarf.lua  giant.lua  goblin1.lua  goblin2.lua  greater_demon.lua  guard.lua  hobgoblin.lua  ice_giant.lua  ice_warrior.lua  imp.lua  lesser_demon.lua  man1.lua  moss_giant.lua  mugger.lua  pirate.lua  skeleton1.lua  skeleton2.lua  skeleton3.lua  white_knight.lua  wiz1.lua  zombie1.lua  zombie2.lua
data/lua/rs1/npc/: aggie.lua  apothecary.lua  aubury.lua  banker.lua  baraek.lua  barbarian.lua  bartender.lua  bob.lua  borderguard.lua  craftingshop.lua  genstore.lua  guide.lua  guildmaster.lua  hans.lua  head_chef.lua  horvik.lua  kebabseller.lua  louielegs.lua  lowe.lua  man.lua  ned.lua  peksa.lua  ranael.lua  reldo.lua  scavvo.lua  silktrader.lua  swordshop.lua  tanner.lua  thessalia.lua  thrander.lua  valaine.lua  zaff.lua  zeke.lua
data/lua/rs1/npc/asgarnia/: barmaid.lua  bartender.lua  betty.lua  brian.lua  brother_jered.lua  cassie.lua  drogo.lua  flynn.lua  gerrant.lua  grum.lua  herquin.lua  monk.lua  pirate.lua  wayne.lua  wydin.lua  wyson.lua
data/lua/rs1/npc/certer/: giles.lua  miles.lua  niles.lua
data/lua/rs1/npc/karamja/: luthas.lua  zambo.lua
data/lua/rs1/quest/asgarnia/dorics_quest/: doric.lua
data/lua/rs1/quest/asgarnia/goblin_diplomacy/: armour.lua  generals.lua  goblins.lua
data/lua/rs1/quest/asgarnia/knights_sword/: sir_vyvin.lua  squire.lua  thurgo.lua
data/lua/rs1/quest/asgarnia/pirates_treasure/: piratechest.lua  redbeard_frank.lua  stashcrate.lua  treasureflower.lua
data/lua/rs1/quest/asgarnia/spy_quest/: fortressdoor.lua  hole.lua  sir_amik.lua  witchgrill.lua
data/lua/rs1/quest/asgarnia/witches_potion/: burningmeat.lua  cauldron.lua  hetty.lua  rat.lua
data/lua/rs1/quest/cooks_assistant/: cook.lua
data/lua/rs1/quest/demon_slayer/: delrith.lua  gypsy.lua  questdrain.lua  rovin.lua  sir_prysin.lua  traiborn.lua
data/lua/rs1/quest/dragon_slayer/: crandorship.lua  dragon.lua  dragondoor.lua  duke.lua  funchest.lua  klarense.lua  map.lua  maze.lua  ned.lua  oracle.lua  oraclechest.lua  oracledoor.lua  oziach.lua  strange_looking_wall.lua  wartface.lua  wormbrain.lua
data/lua/rs1/quest/ernest_the_chicken/: closet_door.lua  compost.lua  lever_doors.lua  oddenstein.lua  piranhas.lua  veronica.lua
data/lua/rs1/quest/imp_catcher/: mizgog.lua
data/lua/rs1/quest/prince_ali_rescue/: aggie.lua  ali.lua  alidoor.lua  hassan.lua  jailguard.lua  joe.lua  keli.lua  leela.lua  ned.lua  osman.lua  wig.lua
data/lua/rs1/quest/restless_ghost/: ghost.lua  ghostcoffin.lua  ghostskull.lua  priest.lua  urhney.lua
data/lua/rs1/quest/romeo_and_juliet/: fatherlawrence.lua  juliet.lua  romeo.lua
data/lua/rs1/quest/sheep_shearer/: fred_the_farmer.lua
data/lua/rs1/quest/shield_of_arrav/: blackarmcupboard.lua  book.lua  curator.lua  jonny.lua  katrine.lua  king.lua  phoenixchest.lua  straven.lua  tramp.lua  weaponsmaster.lua  weaponsstore.lua
data/lua/rs1/quest/vampire_slayer/: coffin.lua  cupboard.lua  dr_harlow.lua  morgan.lua  vampire.lua
data/lua/rs1/skill_cooking/: cake.lua  chefdoor.lua  chefwindmill.lua  dough.lua  fish.lua  meat.lua  pies.lua  pizza.lua  stew.lua  windmill.lua  wine.lua
data/lua/rs1/skill_crafting/: dyes.lua  gems.lua  goldjewellery.lua  leather.lua  pottery.lua  silverjewellery.lua  wool.lua
data/lua/rs1/skill_firemaking/: fire.lua
data/lua/rs1/skill_fishing/: freshfish.lua  rarefish.lua  saltfish.lua
data/lua/rs1/skill_magic/: alchemy.lua  crumbleundead.lua  curses.lua  enchant.lua  missiles.lua  superheat.lua  telegrab.lua  teleport.lua
data/lua/rs1/skill_mining/: guild.lua  miningrocks.lua  prospect.lua
data/lua/rs1/skill_prayer/: altar.lua  bones.lua  monasteryladder.lua
data/lua/rs1/skill_smithing/: metalwork.lua  smelting.lua
data/lua/rs1/skill_woodcutting/: tree.lua
doc/: api.md  differences.md  features.md  messages.txt  style.md  wanted.md  whydec2001.md
platform/win32/: Makefile  README.md  prepare.sh
src/: Makefile  Makefile.am  Makefile.in  admin.c  bank.c  buffer.c  buffer.h  entity.h  inventory.c  inventory.h  loop-ev.c  loop-kqueue.c  loop-linuxpoll.c  loop-poll.c  loop.h  mob.c  netio.c  netio.h  npc.c  player.c  script.c  script.h  server.c  server.h  settings.c  shop.c  shop.h  stat.c  stat.h  trade.c  trade.h  utility.c  utility.h  zone.c  zone.h
src/config/: anim.h  config.c  config.h  item.h  loc.h  text.c
src/ext/: flea.c  flea.h  reallocarr.c
src/ext/libjag/include/: jag.h  map.h
src/ext/libjag/lib/: buffer.h  jag_bzip2_decompress.c  jag_find_entry.c  jag_hash_entry_name.c  jag_map_read_jm.c  jag_read_entry.c  jag_read_header.c  jag_unpack_entry.c  jag_unpack_file.c
src/lua/: script.lua
src/lua/rs1/npc/: man.lua
src/persistence/: database-sqlite.c  database.h  pwhash-argon2.c  pwhash-argon2.h
src/platform/: win32_compat.h
src/protocol/: incoming.c  opcodes.h  opcodes203.c  outgoing.c  rsa-openssl.c  rsa-tiny.c  rsa.h  utility.h
